--- a/ConceptVizBackend/.gitignore
+++ b/ConceptVizBackend/.gitignore
@@ -31,3 +31,12 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Environment Variables & Secrets ###
+.env
+.env.local
+.env.*.local
+application.properties
+application-*.properties
+!application-example.properties
+
