--- a/ConceptVizBackend/src/main/resources/application-example.properties
+++ b/ConceptVizBackend/src/main/resources/application-example.properties
@@ -4,9 +4,9 @@ server.port=8080
 server.servlet.context-path=/api
 
 # Database Configuration
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/conceptviz}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/conceptviz
+spring.datasource.username=postgres
+spring.datasource.password=YOUR_DB_PASSWORD_HERE
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
@@ -16,27 +16,27 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # Ollama Configuration
-spring.ai.ollama.base-url=${OLLAMA_BASE_URL:http://localhost:11434}
-spring.ai.ollama.chat.model=${OLLAMA_MODEL:qwen2.5-coder:7b}
+spring.ai.ollama.base-url=http://localhost:11434
+spring.ai.ollama.chat.model=qwen2.5-coder:7b
 spring.ai.ollama.chat.options.temperature=0.2
 spring.ai.ollama.chat.options.num-predict=2000
 spring.ai.ollama.chat.options.top-p=0.9
 spring.ai.ollama.chat.options.repeat-penalty=1.1
 
 # JWT Configuration
-jwt.secret=${JWT_SECRET}
-jwt.expiration=${JWT_EXPIRATION:86400000}
+jwt.secret=YOUR_JWT_SECRET_HERE
+jwt.expiration=86400000
 
 # OAuth2 Google Configuration
-spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.client-id=YOUR_GOOGLE_CLIENT_ID_HERE
+spring.security.oauth2.client.registration.google.client-secret=YOUR_GOOGLE_CLIENT_SECRET_HERE
 spring.security.oauth2.client.registration.google.scope=profile,email
 
 # CORS Configuration
-cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
+cors.allowed.origins=http://localhost:5173
 
 # Spring Web CORS
-spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
+spring.web.cors.allowed-origins=http://localhost:5173
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,HEAD
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
@@ -44,3 +44,4 @@ spring.web.cors.allow-credentials=true
 # Logging
 logging.level.com.conceptviz=DEBUG
 logging.level.org.springframework.security=DEBUG
+
