--- a/ConceptVizBackend/docker-compose-host.yml
+++ b/ConceptVizBackend/docker-compose-host.yml
@@ -1,22 +1,17 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   postgres:
     image: postgres:15-alpine
     container_name: conceptviz-postgres
     restart: always
+    network_mode: host
     environment:
       POSTGRES_DB: ${DB_NAME:-conceptviz}
       POSTGRES_USER: ${DB_USERNAME:-postgres}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       PGDATA: /var/lib/postgresql/data/pgdata
-    ports:
-      - "${POSTGRES_PORT:-5432}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    networks:
-      - conceptviz-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME:-postgres} -d ${DB_NAME:-conceptviz}"]
       interval: 10s
@@ -33,12 +28,9 @@ services:
     image: ollama/ollama:latest
     container_name: conceptviz-ollama
     restart: always
-    ports:
-      - "11434:11434"
+    network_mode: host
     volumes:
       - ollama_data:/root/.ollama
-    networks:
-      - conceptviz-network
     logging:
       driver: "json-file"
       options:
@@ -52,16 +44,15 @@ services:
       dockerfile: Dockerfile
     container_name: conceptviz-backend
     restart: always
-    ports:
-      - "${BACKEND_PORT:-8080}:8080"
+    network_mode: host
     environment:
       # Database Configuration
-      DB_URL: jdbc:postgresql://postgres:5432/${DB_NAME:-conceptviz}
+      DB_URL: jdbc:postgresql://localhost:5432/${DB_NAME:-conceptviz}
       DB_USERNAME: ${DB_USERNAME:-postgres}
       DB_PASSWORD: ${DB_PASSWORD}
 
       # Ollama Configuration
-      OLLAMA_BASE_URL: http://ollama:11434
+      OLLAMA_BASE_URL: http://localhost:11434
       OLLAMA_MODEL: ${OLLAMA_MODEL:-qwen2.5-coder:7b}
 
       # JWT Configuration
@@ -69,7 +60,7 @@ services:
       JWT_EXPIRATION: ${JWT_EXPIRATION:-86400000}
 
       # CORS Configuration
-      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-http://localhost:5173,http://localhost,http://frontend}
+      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-http://localhost:5173,http://localhost,http://localhost:80}
 
       # Google OAuth2 Configuration
       GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
@@ -84,10 +75,8 @@ services:
         condition: service_healthy
       ollama:
         condition: service_started
-    networks:
-      - conceptviz-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/actuator/health"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/api/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -105,14 +94,11 @@ services:
       dockerfile: Dockerfile
     container_name: conceptviz-frontend
     restart: always
-    ports:
-      - "${FRONTEND_PORT:-80}:80"
+    network_mode: host
     depends_on:
       - backend
-    networks:
-      - conceptviz-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/health"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -123,12 +109,9 @@ services:
         max-size: "10m"
         max-file: "3"
 
-networks:
-  conceptviz-network:
-    driver: bridge
-
 volumes:
   postgres_data:
     driver: local
   ollama_data:
     driver: local
+
