--- a/ConceptVizBackend/src/main/resources/application.properties
+++ b/ConceptVizBackend/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
 
 # Ollama Configuration
 spring.ai.ollama.base-url=${OLLAMA_BASE_URL:http://localhost:11434}
