--- a/ConceptVizBackend/docker-compose.yml
+++ b/ConceptVizBackend/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   postgres:
@@ -12,7 +10,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       PGDATA: /var/lib/postgresql/data/pgdata
     ports:
-      - "${POSTGRES_PORT:-5432}:5432"
+      - "${POSTGRES_PORT:-5433}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
@@ -28,23 +26,6 @@ services:
         max-size: "10m"
         max-file: "3"
 
-  # Ollama AI Service
-  ollama:
-    image: ollama/ollama:latest
-    container_name: conceptviz-ollama
-    restart: always
-    ports:
-      - "11434:11434"
-    volumes:
-      - ollama_data:/root/.ollama
-    networks:
-      - conceptviz-network
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
   # Spring Boot Backend
   backend:
     build:
@@ -54,14 +35,16 @@ services:
     restart: always
     ports:
       - "${BACKEND_PORT:-8080}:8080"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
       # Database Configuration
       DB_URL: jdbc:postgresql://postgres:5432/${DB_NAME:-conceptviz}
       DB_USERNAME: ${DB_USERNAME:-postgres}
       DB_PASSWORD: ${DB_PASSWORD}
 
-      # Ollama Configuration
-      OLLAMA_BASE_URL: http://ollama:11434
+      # Ollama Configuration (uses host's Ollama via host.docker.internal)
+      OLLAMA_BASE_URL: http://host.docker.internal:11434
       OLLAMA_MODEL: ${OLLAMA_MODEL:-qwen2.5-coder:7b}
 
       # JWT Configuration
@@ -82,12 +65,10 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-      ollama:
-        condition: service_started
     networks:
       - conceptviz-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/actuator/health"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/api/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -106,7 +87,7 @@ services:
     container_name: conceptviz-frontend
     restart: always
     ports:
-      - "${FRONTEND_PORT:-80}:80"
+      - "${FRONTEND_PORT:-3000}:80"
     depends_on:
       - backend
     networks:
@@ -129,6 +110,4 @@ networks:
 
 volumes:
   postgres_data:
-    driver: local
-  ollama_data:
     driver: local
