--- a/ConceptVizFrontend/nginx.conf
+++ b/ConceptVizFrontend/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 3000;
+    listen 80;
     server_name _;
 
     # Set the root directory for all locations
@@ -30,7 +30,7 @@ server {
 
     # API proxy
     location /api {
-        proxy_pass http://localhost:8080;
+        proxy_pass http://backend:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
