--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
   # Spring Boot Backend
   backend:
     build:
-      context: .
+      context: ./ConceptVizBackend
       dockerfile: Dockerfile
     container_name: conceptviz-backend
     restart: always
@@ -52,7 +52,7 @@ services:
       JWT_EXPIRATION: ${JWT_EXPIRATION:-86400000}
 
       # CORS Configuration
-      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-http://localhost:5173,http://localhost,http://frontend}
+      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-http://localhost:5173,http://localhost:3000,http://localhost,http://frontend}
 
       # Google OAuth2 Configuration
       GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
@@ -82,7 +82,7 @@ services:
   # React Frontend
   frontend:
     build:
-      context: ../ConceptVizFrontend
+      context: ./ConceptVizFrontend
       dockerfile: Dockerfile
     container_name: conceptviz-frontend
     restart: always
@@ -111,3 +111,4 @@ networks:
 volumes:
   postgres_data:
     driver: local
+
