--- a/ConceptVizBackend/src/main/resources/application.properties
+++ b/ConceptVizBackend/src/main/resources/application.properties
@@ -4,12 +4,13 @@ server.port=8080
 server.servlet.context-path=/api
 
 # Database Configuration
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/conceptviz}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL:${DB_URL:jdbc:postgresql://localhost:5432/conceptviz}}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${DB_USERNAME:postgres}}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${DB_PASSWORD:}}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -44,3 +45,8 @@ spring.web.cors.allow-credentials=true
 # Logging
 logging.level.com.conceptviz=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+management.endpoints.web.base-path=/actuator
