--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_DB: ${DB_NAME:-conceptviz}
       POSTGRES_USER: ${DB_USERNAME:-postgres}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-1411}
       PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - "${POSTGRES_PORT:-5433}:5432"
@@ -38,10 +38,10 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
-      # Database Configuration
-      DB_URL: jdbc:postgresql://postgres:5432/${DB_NAME:-conceptviz}
-      DB_USERNAME: ${DB_USERNAME:-postgres}
-      DB_PASSWORD: ${DB_PASSWORD}
+      # Database Configuration (using host.docker.internal to reach PostgreSQL)
+      SPRING_DATASOURCE_URL: jdbc:postgresql://host.docker.internal:5433/${DB_NAME:-conceptviz}
+      SPRING_DATASOURCE_USERNAME: ${DB_USERNAME:-postgres}
+      SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD:-1411}
 
       # Ollama Configuration (uses host's Ollama via host.docker.internal)
       OLLAMA_BASE_URL: http://host.docker.internal:11434
@@ -93,7 +93,7 @@ services:
     networks:
       - conceptviz-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/health"]
+      test: ["CMD-SHELL", "curl -f http://127.0.0.1/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
